# PdfMasterTool

./: .replit  OAUTH_SETUP.md  about.html  careers.html  contact.html  cookies.html  dashboard.html  index.html  login.html  package-lock.json  package.json  privacy.html  pyproject.toml  replit.md  script.js  shared-footer-loader.js  shared-footer.html  signup.html  start-production.sh  style.css  tailwind.config.ts  terms.html  test.xlsx  test_output.pptx  test_output_fixed.pptx  tsconfig.json  vite.config.js
attached_assets/: Pasted--Objective-Build-a-full-stack-professional-grade-PDF-utility-app-using-Node-js-and-Supabase-on-R-1752931797656_1752931797656.txt  Pasted--Objective-Build-a-full-stack-professional-grade-PDF-utility-app-using-Node-js-and-Supabase-on-Re-1752931774829_1752931774830.txt  Pasted--Project-Name-I-Love-Making-PDF-Objective-Develop-a-full-featured-PDF-utility-web-app-on-1752924784322_1752924784325.txt  Pasted-Create-a-full-stack-professional-PDF-Tools-Web-App-iLovePDF-clone-with-the-following-Object-1752931704634_1752931704637.txt  Pasted-Create-a-professional-full-stack-PDF-Tools-Web-App-like-iLovePDF-using-Tech-Stack-Fronten-1752932316484_1752932316491.txt  Pasted-I-m-building-an-Edit-PDF-tool-on-my-Replit-based-website-like-iLovePDF-When-I-upload-a-PDF-file--1752955162371_1752955162378.txt  Pasted-Please-fix-the-issue-of-Error-loading-PDF-in-the-Edit-PDF-tool-The-tool-should-support-rendering--1752954202361_1752954202366.txt
client/: index.html
outputs/: Ifra Saleem - UI_UX Designer Resume-converted-1752945114634.docx  (+1 more)
server/: index.ts  (+14 more)
(+72 files in other folders)
